<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Super Dice!</string>
    <string name="action_settings">Current scores</string>
	<string name="game_title">[NAME]\'s turn!</string>
	<string name="you_rolled_a">You rolled a</string>
	<string name="roll_again_text">Roll again or pass to [NAME]?</string>
	<string name="round_finished_text">Pass to [NAME].</string>
	<string name="play">Play!</string>
	<string name="score">Score</string>

	<string name="ask_for_start_title">Get ready, [NAME]!</string>
	<string name="ask_for_start_text">Press OK and shake or swipe your device to roll the die.</string>

	<string name="user_selection_title">Choose and add players:</string>
	<string name="could_not_add_user">Could not add user "[NAME]"!</string>
	<string name="input_name_default_text">Name</string>
	<string name="button_add_text">+</string>
	<string name="button_back_text">Back</string>
	<string name="button_confirm_text">OK</string>
	<string name="button_sync_text">Sync</string>
	<string name="button_exit_text">Exit</string>
	<string name="button_again_text">Again</string>
	<string name="button_roll_again_text">Again</string>
	<string name="button_pass_text">Pass</string>
	<string name="button_delete_text">-</string>

	<string name="target_score_title">Choose target score:</string>
	<string name="target_score_default">40</string>
    <string name="target_score_toast">The target score is </string>
	<string name="target_score_text">
		You will play in rounds to achieve a target score.\n\n
		If the player throws a one, the score of the current round will be eliminated and the die is passed to the next player.\n\n
		The first player who reaches this score will win the game.\n\n
		After each throw, the player has the option to add the thrown number to his total score or risk to throw the dice again.\n\n
	</string>

	<string name="game_over_title">Game over!</string>
	<string name="won_the_game">won the game</string>

	<string name="round_scores_title">Current scores:</string>
	<string name="sync_failed">Online synchronization failed!</string>
	<string name="sync_ok">Your users and their won games were synchronized online.</string>

</resources>
