<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".DiceAnimationActivity" >

	<TextView android:id="@+id/titleText"
	          android:text="@string/target_score_title"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:textSize="@dimen/title_font_size"
	          android:layout_centerHorizontal="true"
	          android:gravity="center"
	          android:layout_margin="@dimen/activity_vertical_margin" />

	<EditText android:id="@+id/editTargetScore"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:paddingLeft="@dimen/input_vertical_padding"
	          android:paddingRight="@dimen/input_vertical_padding"
	          android:inputType="number"
	          android:text="@string/target_score_default"
	          android:ems="2"
	          android:layout_below="@+id/titleText"
	          android:layout_centerHorizontal="true"
	          android:background="@color/input_background_color" />

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="@dimen/activity_vertical_margin"
			android:text="@string/target_score_text"
			android:layout_below="@+id/editTargetScore"
			android:layout_above="@+id/buttonContainer">

		<TextView android:id="@+id/hasWonText"
		          android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:layout_centerHorizontal="true"
		          android:gravity="center"
		          android:text="@string/target_score_text"	/>
	</ScrollView>

	<LinearLayout
			android:id="@+id/buttonContainer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_alignParentBottom="true">

		<Button
				android:id="@+id/userBackButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_back_text" />

		<Button
				android:id="@+id/userConfirmButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_confirm_text"
                android:onClick="startDiceAnimation"/>

	</LinearLayout>

</RelativeLayout>
