<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".DiceAnimationActivity" >

	<TextView android:id="@+id/titleText"
	          android:text="@string/game_over_title"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:textSize="@dimen/title_font_size"
	          android:layout_centerHorizontal="true"
	          android:gravity="center"
	          android:layout_margin="@dimen/activity_vertical_margin" />


	<RelativeLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/activity_vertical_margin"
			android:layout_below="@+id/titleText"
			android:layout_above="@+id/buttonContainer">

		<RelativeLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:layout_centerVertical="true"
				android:layout_margin="@dimen/activity_vertical_margin">

			<TextView android:id="@+id/userNameText"
			          android:layout_width="match_parent"
			          android:layout_height="wrap_content"
			          android:textSize="24pt"
			          android:gravity="center"
			          android:text="Player"	/>

			<TextView android:id="@+id/hasWonText"
			          android:layout_width="match_parent"
			          android:layout_height="wrap_content"
			          android:gravity="center"
			          android:layout_below="@id/userNameText"
			          android:text="@string/won_the_game"	/>

		</RelativeLayout>

	</RelativeLayout>

	<LinearLayout
			android:orientation="vertical"
			android:id="@+id/buttonContainer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:gravity="center"
			android:layout_alignParentBottom="true">

		<Button
				android:id="@+id/againButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/button_again_text" />

		<Button
				android:id="@+id/syncButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/button_sync_text" />

		<Button
				android:id="@+id/exitButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/button_exit_text" />

	</LinearLayout>

</RelativeLayout>
