<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".DiceAnimationActivity" >

	<TextView android:id="@+id/titleText"
	          android:text="@string/user_selection_title"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:textSize="@dimen/title_font_size"
	          android:layout_margin="@dimen/activity_vertical_margin"
	          android:layout_centerHorizontal="true"
	          android:textColor="@android:color/primary_text_dark"
	          android:gravity="center"/>

	<EditText
			android:id="@+id/editUserName"
			android:layout_marginLeft="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/input_vertical_padding"
			android:paddingRight="@dimen/input_vertical_padding"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:text="@string/input_name_default_text"
			android:ems="10"
			android:background="@android:color/darker_gray"
			android:layout_alignTop="@+id/addUserButton"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_toLeftOf="@+id/addUserButton"
			android:layout_alignBottom="@+id/addUserButton"/>

	<Button
			style="?android:attr/buttonStyleSmall"
			android:id="@+id/addUserButton"
			android:layout_marginRight="@dimen/activity_vertical_margin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_add_text"
			android:layout_below="@+id/titleText"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"/>

	<ListView
			android:id="@+id/userListView"
			android:paddingLeft="@dimen/input_vertical_padding"
			android:paddingRight="@dimen/input_vertical_padding"
			android:layout_centerVertical="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/editUserName"
			android:layout_alignParentLeft="true"
			android:layout_margin="@dimen/activity_vertical_margin"
			android:layout_marginTop="0dp"
			android:layout_alignParentStart="false"
			android:choiceMode="multipleChoiceModal"
			android:textAlignment="center"
			android:stackFromBottom="false"/>

</RelativeLayout>
